# futures-shim

./: Cargo.toml  README.md  appveyor.yml
src/: lib.rs  mpsc.rs
