[package]
name = "futures-shim"
version = "0.1.1"
description = "An adapter for futures-unaware components"
authors = ["Yurii Rashkovskii <yrashk@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/yrashk/futures-shim"
documentation = "https://docs.rs/futures-shim"
keywords = ["future", "mpsc"]

[dependencies]
futures = "0.1"

[dev-dependencies]
tokio-core = "0.1"
